// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ManagedIndexControls /> spec renders data streams selection field 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  style="padding: 0px 5px;"
>
  <div
    class="euiFlexItem"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
    >
      <div
        class="euiFlexItem euiSearchBar__searchHolder"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
              class="euiFieldSearch euiFieldSearch--fullWidth"
              placeholder="Search"
              type="search"
              value=""
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.271 11.978l3.872 3.873a.502.502 0 00.708 0 .502.502 0 000-.708l-3.565-3.564c2.38-2.747 2.267-6.923-.342-9.532-2.73-2.73-7.17-2.73-9.898 0-2.728 2.729-2.728 7.17 0 9.9a6.955 6.955 0 004.949 2.05.5.5 0 000-1 5.96 5.96 0 01-4.242-1.757 6.01 6.01 0 010-8.486c2.337-2.34 6.143-2.34 8.484 0a6.01 6.01 0 010 8.486.5.5 0 00.034.738z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero euiSearchBar__filtersHolder"
      >
        <div
          class="euiFilterGroup"
        >
          <div
            class="euiPopover euiPopover--anchorDownCenter"
            id="field_value_selection_0"
          >
            <div
              class="euiPopover__anchor"
            >
              <button
                class="euiButtonEmpty euiButtonEmpty--text euiFilterButton euiFilterButton--hasIcon"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.069 5.157L8.384 9.768a.546.546 0 01-.768 0L2.93 5.158a.552.552 0 00-.771 0 .53.53 0 000 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 000-.76.552.552 0 00-.771 0z"
                      fill-rule="non-zero"
                    />
                  </svg>
                  <span
                    class="euiButtonEmpty__text"
                  >
                    <span
                      class="euiFilterButton__textShift"
                      data-text="Data streams"
                      title="Data streams"
                    >
                      Data streams
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <div
      class="euiSwitch"
    >
      <button
        aria-checked="true"
        aria-labelledby="some_html_id"
        class="euiSwitch__button"
        data-test-subj="toggleShowDataStreams"
        id="some_html_id"
        role="switch"
        type="button"
      >
        <span
          class="euiSwitch__body"
        >
          <span
            class="euiSwitch__thumb"
          />
          <span
            class="euiSwitch__track"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiSwitch__icon"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.293 8L3.146 3.854a.5.5 0 11.708-.708L8 7.293l4.146-4.147a.5.5 0 01.708.708L8.707 8l4.147 4.146a.5.5 0 01-.708.708L8 8.707l-4.146 4.147a.5.5 0 01-.708-.708L7.293 8z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiSwitch__icon euiSwitch__icon--checked"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.5 12a.502.502 0 01-.354-.146l-4-4a.502.502 0 01.708-.708L6.5 10.793l6.646-6.647a.502.502 0 01.708.708l-7 7A.502.502 0 016.5 12"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </button>
      <span
        class="euiSwitch__label"
        id="some_html_id"
      >
        Show data stream indices
      </span>
    </div>
  </div>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
    style="max-width: 250px;"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--isAutoRefreshOnly"
    >
      <div
        class="euiFlexItem"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--group euiSuperDatePicker"
        >
          <div
            class="euiPopover euiPopover--anchorDownLeft"
          >
            <div
              class="euiPopover__anchor euiQuickSelectPopover__anchor"
            >
              <button
                aria-label="Date quick select"
                class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiFormControlLayout__prepend"
                data-test-subj="superDatePickerToggleQuickMenuButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.069 5.157L8.384 9.768a.546.546 0 01-.768 0L2.93 5.158a.552.552 0 00-.771 0 .53.53 0 000 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 000-.76.552.552 0 00-.771 0z"
                      fill-rule="non-zero"
                    />
                  </svg>
                  <span
                    class="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.5 13A5.506 5.506 0 012 7.5C2 4.467 4.467 2 7.5 2S13 4.467 13 7.5 10.533 13 7.5 13m0-12a6.5 6.5 0 100 13 6.5 6.5 0 000-13m3 6H8V3.5a.5.5 0 00-1 0v4a.5.5 0 00.5.5h3a.5.5 0 000-1"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <div
              class="euiDatePickerRange euiDatePickerRange--readOnly euiDatePickerRange--inGroup"
            >
              <span
                class="euiSuperDatePicker__prettyFormat"
              >
                Off
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ManagedIndexControls /> spec renders the component 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  style="padding: 0px 5px;"
>
  <div
    class="euiFlexItem"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
    >
      <div
        class="euiFlexItem euiSearchBar__searchHolder"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--fullWidth"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
              class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch-isClearable"
              placeholder="Search"
              type="search"
              value="testing"
            />
            <div
              class="euiFormControlLayoutIcons"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </span>
            </div>
            <div
              class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <button
                aria-label="Clear input"
                class="euiFormControlLayoutClearButton"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutClearButton__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <div
      class="euiSwitch"
    >
      <button
        aria-checked="false"
        aria-labelledby="some_html_id"
        class="euiSwitch__button"
        data-test-subj="toggleShowDataStreams"
        id="some_html_id"
        role="switch"
        type="button"
      >
        <span
          class="euiSwitch__body"
        >
          <span
            class="euiSwitch__thumb"
          />
          <span
            class="euiSwitch__track"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon euiSwitch__icon--checked"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </span>
      </button>
      <span
        class="euiSwitch__label"
        id="some_html_id"
      >
        Show data stream indices
      </span>
    </div>
  </div>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
    style="max-width: 250px;"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--isAutoRefreshOnly"
    >
      <div
        class="euiFlexItem"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--group euiSuperDatePicker"
        >
          <div
            class="euiPopover euiPopover--anchorDownLeft"
          >
            <div
              class="euiPopover__anchor euiQuickSelectPopover__anchor"
            >
              <button
                aria-label="Date quick select"
                class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiFormControlLayout__prepend"
                data-test-subj="superDatePickerToggleQuickMenuButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  <span
                    class="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon-isLoading"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <div
              class="euiDatePickerRange euiDatePickerRange--readOnly euiDatePickerRange--inGroup"
            >
              <span
                class="euiSuperDatePicker__prettyFormat"
              >
                Off
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
